feat: ready for game 7

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: Animation
+- name: User Experience
 
-- name: Web Security
+- name: Authentication
   sponsor: Clerk
 
-- name: Acronyms
+- name: Developerisms
 
-- name: Dev Lore
+- name: Frameworks
   sponsor: Neon
