feat: ready for game 8

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: User Experience
+- name: Deployment
 
-- name: Authentication
+- name: User Management
   sponsor: Clerk
 
 - name: Developerisms
 
-- name: Frameworks
+- name: Shipping Fast
   sponsor: Neon
